Update styling on comment form section; fix distortion on next video thumbnails

--- a/src/components/NextVideoCard/NextVideoCard.scss
+++ b/src/components/NextVideoCard/NextVideoCard.scss
@@ -18,7 +18,7 @@
         // height: 100%;
         width: 6.5rem;
         height: 4rem;
-        // object-fit: cover;
+        object-fit: cover;
         border-radius: 0.25rem;
     }
 
